added readme, documentation

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "camera_calibration"]
 	path = camera_calibration
 	url = https://github.com/RobVisLab/camera_calibration.git
+[submodule "libcaer"]
+	path = libcaer
+	url = https://github.com/inilabs/libcaer.git
